--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,13 +6,12 @@ name: Node.js CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
